Atualização de estilo strong na seção Sobre

--- a/style.css
+++ b/style.css
@@ -182,18 +182,19 @@ i {
 .about-content img {
   max-width: 570px;
 }
-
 .about-content div {
   flex: 1;
 }
-
-.about-description h2 {
+.about-content .about-description h2 {
   font-size: 38px;
   margin-bottom: 24px;
 }
-.about-description p {
+.about-content .about-description p {
   margin-bottom: 14px;
   line-height: 150%;
+}
+.about-content .about-description p strong {
+  color: #d94140;
 }
 
 @media screen and (max-width: 800px) {
@@ -238,7 +239,7 @@ i {
   align-items: center;
   justify-content: center;
   gap: 16px;
-  padding: 0 44px 34px 44px;
+  padding: 14px 44px 34px 44px;
 }
 .haircuts .haircut {
   flex: 1;
