--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ i {
   content: "";
   display: block;
   position: absolute;
-  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../assets/bg.svg");
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("assets/bg.svg");
   left: 0;
   top: 0;
   width: 100%;
@@ -335,12 +335,23 @@ i {
     max-width: 64px;
   }
 }
+html[data-theme=default] {
+  background: #06121e;
+}
+
+html[data-theme=light] {
+  background: #0c2135;
+}
+
+html[data-theme=dark] {
+  background: #040f1a;
+}
+
 body {
   font-family: "Sora", sans-serif;
   width: 100%;
   height: 100vh;
   position: relative;
-  background-color: #06121e;
 }
 
 button {
