--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import "partials/header";
 @import "partials/layout";
 @import "partials/footer";
+@import "partials/themes";
 
 
 body {
@@ -16,7 +17,6 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-color: $primary-normal;
 }
 
 button {
