--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -26,7 +26,6 @@
 // Introduction's style
 
 .introduction {
-    color: $white-normal;
     min-height: 80vh;
     display: flex;
     flex-direction: column;
@@ -48,8 +47,6 @@
 
 .button-contact {
     padding: 14px 28px;
-    color: $white-normal;
-    background: $red-normal;
     border: 0;
     font-size: 18px;
     font-weight: 800;
@@ -70,40 +67,10 @@
     }
 }
 
-@media screen and (max-width: 800px) {
-    .introduction {
-        min-height: 60vh;
-        
-        h1 {
-            font-size: 34px;
-            padding: 0 14px;
-            width: 100%;
-        }
-
-        p {
-            font-size: 14px;
-        }
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .introduction {
-        h1 {
-            font-size: 24px;
-        }
-
-        p {
-            font-size: 12px;
-        }
-    }
-}
-
 // About's style
 
 .about {
-    background: $primary-normal;
     overflow: hidden;
-    color: $white-normal;
 }
 
 .about-content {
@@ -130,16 +97,7 @@
         p {
             margin-bottom: 14px;
             line-height: 150%;
-            strong {
-                color: $red-normal;
-            }
         }
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .about-content {
-        flex-direction: column;
     }
 }
 
@@ -147,13 +105,11 @@
 
 .services,
 .map {
-    background: $white-normal;
-    color: $black-normal;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 54px 14px;
+    padding: 54px 0 0 0;
 }
 
 .services-content,
@@ -174,7 +130,7 @@
 
     iframe {
         width: 100%;
-        height: 40vh;
+        height: 50vh;
         border: unset;
     }
 }
@@ -190,7 +146,6 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        background: $white-normal;
         border-radius: 8px;
         box-shadow: 0 -1px 17px -4px rgba(0,0,0,0.45);
         overflow: hidden;
@@ -210,11 +165,8 @@
             display: flex;
             justify-content: space-between;
             padding: 14px;
-            background: $white-normal;
             z-index: 2;
             button {
-                background: $red-normal;
-                color: $white-normal;
                 padding: 4px 8px;
                 border-radius: 4px;
                 border: 0;
@@ -224,7 +176,37 @@
     }
 }
 
+@media screen and (max-width: 480px) {
+    .introduction {
+        h1 {
+            font-size: 24px;
+        }
+
+        p {
+            font-size: 12px;
+        }
+    }
+}
+
 @media screen and (max-width: 800px) {
+    .introduction {
+        min-height: 60vh;
+        
+        h1 {
+            font-size: 34px;
+            padding: 0 14px;
+            width: 100%;
+        }
+
+        p {
+            font-size: 14px;
+        }
+    }
+
+    .about-content {
+        flex-direction: column;
+    }
+
     .haircuts {
         flex-direction: column;
         .haircut {
