--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -8,10 +8,6 @@ header {
     justify-content: space-between;
 }
 
-i {
-    color: $white-normal;
-}
-
 .header-icons {
     display: flex;
     gap: 14px;
@@ -19,7 +15,6 @@ i {
 
 .header-icons a:hover {
     i {
-        color: $red-light;
         animation: translateY 0.8s infinite alternate;
     }
 }
@@ -35,17 +30,12 @@ i {
 }
 
 .header-button {
-    border: 1px solid $white-normal;
+    border-width: 1px;
+    border-style: solid;
     padding: 8px 24px;
     border-radius: 4px;
-    color: $white-normal;
     background: transparent;
-    transition: background 0.8s;
-}
-
-.header-button:hover {
-    border: 1px solid $red-light;
-    background: $red-light;
+    transition: all 0.6s ease-in-out !important;
 }
 
 .header-logo {
