--- a/partials/_themes.scss
+++ b/partials/_themes.scss
@@ -1,7 +1,29 @@
 $themes: (
     light: (
-        bg: $primary-light,
-        bg-image: linear-gradient(to bottom, rgba(6,18,30,0.1), $primary-light)
+        bg: $white-light,
+        header-icons: $primary-normal,
+        header-icons-hover: $red-light,
+        header-button-border: $primary-dark,
+        header-button-text: $primary-dark,
+        header-button-border-hover: $red-light,
+        header-button-bg-hover: $red-light,
+        bg-home: linear-gradient(to bottom, $white-dark, rgb(12 33 53 / 20%)),
+        introduction-text: $black-dark,
+        button-contact-bg: $red-normal,
+        button-contact-text: $white-normal,
+        about-bg: $primary-light,
+        about-text: $white-light,
+        about-strong: $red-normal,
+        services-map-bg: $red-dark,
+        services-map-text: $white-dark,
+        services-map-strong: $primary-dark,
+        haircut-bg: $white-normal,
+        haircut-info-bg: $white-normal,
+        haircut-info-button-bg: $red-normal,
+        haircut-info-button-text: $white-normal,
+        footer-text: $primary-dark,
+        footer-icons: $red-dark,
+        footer-icons-hover: $primary-dark,
     ),
     dark: (
         bg: $primary-dark,
