--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ header {
   gap: 18px;
 }
 .footer .footer-icons a i {
-  transition: all 0.6s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .footer .button-whatsapp {
   position: fixed;
@@ -352,8 +352,68 @@ header {
   }
 }
 html[data-theme=light] body {
-  background: #0c2135;
+  background: #fefbff;
 }
+html[data-theme=light] .header-icons i {
+  color: #06121e;
+}
+html[data-theme=light] .header-icons a:hover i {
+  color: #d34040;
+}
+html[data-theme=light] .header-button {
+  border-color: #040f1a;
+  color: #040f1a;
+}
+html[data-theme=light] .header-button:hover {
+  border-color: #d34040;
+  background: #d34040;
+}
+html[data-theme=light] .bg-home::before {
+  background-image: linear-gradient(to bottom, #edeaef, rgba(12, 33, 53, 0.2));
+}
+html[data-theme=light] .introduction {
+  color: #161617;
+}
+html[data-theme=light] .button-contact {
+  background: #d94140;
+  color: #fff;
+}
+html[data-theme=light] .about {
+  background: #0c2135;
+  color: #fefbff;
+}
+html[data-theme=light] .about-description p strong {
+  color: #d94140;
+}
+html[data-theme=light] .services,
+html[data-theme=light] .map {
+  background: #b42b2b;
+  color: #edeaef;
+}
+html[data-theme=light] .services strong,
+html[data-theme=light] .map strong {
+  color: #040f1a;
+}
+html[data-theme=light] .haircuts .haircut {
+  background: #fff;
+}
+html[data-theme=light] .haircuts .haircut .haircut-info {
+  background: #fff;
+}
+html[data-theme=light] .haircuts .haircut .haircut-info button {
+  background: #d94140;
+  color: #fff;
+}
+html[data-theme=light] .footer {
+  color: #040f1a;
+}
+html[data-theme=light] .footer .footer-icons i {
+  color: #b42b2b;
+}
+html[data-theme=light] .footer .footer-icons a:hover i {
+  color: #040f1a;
+}
+
 html[data-theme=dark] body {
   background: #040f1a;
 }
