--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,8 @@
 @import "partials/layout";
 @import "partials/footer";
 @import "partials/themes";
-@import "partials/modal-promo";
+@import "partials/promo";
+//@import "partials/modal-promo";
 
 
 body {
