--- a/partials/promo.css
+++ b/partials/promo.css
@@ -3,10 +3,32 @@
   left: -200px;
   bottom: 25px;
   transition: 2.3s ease-in-out;
+  z-index: 3;
 }
 .promo a img {
   max-width: 15%;
   animation: gift 1.7s alternate infinite;
+}
+.promo a span {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  opacity: 0;
+  font-size: 14px;
+  padding: 3px 5px;
+  border-radius: 3px;
+  transform: translate(0, -50%);
+  transition: 1.3s ease-in-out;
+  z-index: -1;
+}
+.promo a span::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -7px;
+  transform: translate(0, -50%);
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
 }
 
 @keyframes gift {
