--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ html[data-theme=light] .bg-home .button-light {
 }
 html[data-theme=light] .bg-home .button-dark {
   background: #d34040;
-  color: #161617;
+  color: #edeaef;
   opacity: 1;
 }
 html[data-theme=light] .bg-home::before {
@@ -434,6 +434,17 @@ html[data-theme=light] .haircuts .haircut .haircut-info button {
   background: #d94140;
   color: #fff;
 }
+html[data-theme=light] .promo a img {
+  filter: drop-shadow(0px 0px 1px #fefbff);
+}
+html[data-theme=light] .promo a span {
+  background: #232224;
+  color: #fefbff;
+  filter: drop-shadow(0px 0px 1px #fefbff);
+}
+html[data-theme=light] .promo a span::before {
+  border-right: 7px solid #232224;
+}
 html[data-theme=light] .footer {
   color: #040f1a;
 }
@@ -463,7 +474,7 @@ html[data-theme=dark] .header-button:hover {
 }
 html[data-theme=dark] .bg-home .button-light {
   background: #d34040;
-  color: #161617;
+  color: #edeaef;
   opacity: 1;
 }
 html[data-theme=dark] .bg-home .button-dark {
@@ -507,6 +518,17 @@ html[data-theme=dark] .haircuts .haircut .haircut-info button {
   background: #d94140;
   color: #fff;
 }
+html[data-theme=dark] .promo a img {
+  filter: drop-shadow(0px 0px 1px #fefbff);
+}
+html[data-theme=dark] .promo a span {
+  background: #232224;
+  color: #fefbff;
+  filter: drop-shadow(0px 0px 1px #fefbff);
+}
+html[data-theme=dark] .promo a span::before {
+  border-right: 7px solid #232224;
+}
 html[data-theme=dark] .footer {
   color: #fff;
 }
@@ -522,20 +544,40 @@ html[data-theme=dark] .footer .footer-icons a:hover i {
   left: -200px;
   bottom: 25px;
   transition: 2.3s ease-in-out;
+  z-index: 3;
 }
 .promo a img {
   max-width: 15%;
   animation: gift 1.7s alternate infinite;
 }
+.promo a span {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  opacity: 0;
+  font-size: 14px;
+  padding: 3px 5px;
+  border-radius: 3px;
+  transform: translate(0, -50%);
+  transition: 1.3s ease-in-out;
+  z-index: -1;
+}
+.promo a span::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -7px;
+  transform: translate(0, -50%);
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+}
 
 @keyframes gift {
   from {
     transform: rotate(0deg);
-    filter: drop-shadow(0px 0px 20px #fefbff);
   }
   to {
     transform: rotate(40deg);
-    filter: drop-shadow(0px 0px 30px #fefbff);
   }
 }
 body {
