--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@
 @import "partials/footer";
 @import "partials/themes";
 @import "partials/promo";
-//@import "partials/modal-promo";
+@import "partials/lp-promo";
 
 
 body {
