--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 54px 0;
     gap: 24px;  
 
@@ -54,10 +55,35 @@
 }
 
 @media screen and (max-width: 800px) {
+
     .footer {
+
         .button-whatsapp {
+
             img {
                 max-width: 64px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .button-whatsapp {
+
+        .tooltip-text {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 340px) {
+
+    .footer {
+
+        .button-whatsapp {
+            
+            img {
+                max-width: 44px;
             }
         }
     }
