--- a/partials/promo.css
+++ b/partials/promo.css
@@ -38,4 +38,20 @@
   to {
     transform: rotate(40deg);
   }
+}
+@media screen and (max-width: 425px) {
+  .promo {
+    bottom: 90px;
+  }
+}
+@media screen and (max-width: 340px) {
+  a span {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 340px) {
+  a span {
+    font-size: 10px;
+    padding: 3px;
+  }
 }/*# sourceMappingURL=promo.css.map */
