--- a/partials/_lp-promo.scss
+++ b/partials/_lp-promo.scss
@@ -1,6 +1,7 @@
 body {
     background: url('./assets/bg.svg') no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .lp-header {
@@ -16,4 +17,124 @@ body {
             max-width: 5%;
         }
     }
+}
+
+.lp-principal {
+    background: rgba($color: $primary-dark, $alpha: .5);
+    width: 100%;
+    padding: 45px 0;
+    margin: 15px auto;
+
+    section {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        justify-content: space-between;
+        width: 60vw;
+        margin: 0 auto;
+        padding: 0 30px 40px 30px;
+
+        h1,
+        h2 {
+            text-transform: uppercase;
+        }
+
+        h1 {
+            filter: drop-shadow(1px 2px 1px $primary-dark);
+            font-size: 2.4rem;
+            font-weight: bold;
+            color: $white-normal;
+        }
+
+        h2 {
+            filter: drop-shadow(1px 2px 1px $primary-normal);
+            font-size: 1.8rem;
+            color: $red-normal;
+            margin: 14px 0;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: $white-normal;
+            line-height: 150%;;
+            margin: 0 0 7px 0;
+
+            a {
+                
+                color: $white-normal;
+                border-bottom: 3px solid $red-normal;
+                transition: all 0.3s ease-in-out;
+            }
+
+            a:hover {
+                color: $red-light;
+            }
+        }
+    }
+
+    .botao {
+        border: unset;
+        background: $red-normal;
+        font-size: 1rem;
+        color: $white-light;
+        padding: 15px 30px;
+        margin: 15px auto;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .botao:hover {
+        background: $white-light;
+        color: $black-normal;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+        justify-content: space-between;
+        width: 60vw;
+        background-color: $primary-light;
+        color: $white-normal;
+        border-radius: 7px;
+        box-shadow: 0 0 5px 0 $white-normal;
+        margin: 0 auto;
+        padding: 20px 30px 40px 30px;
+
+        label {
+            margin: 14px 0 3px 0;
+        }
+        
+        input,
+        input::placeholder,
+        select,
+        option {
+            color: $black-normal;
+        }
+
+        input,
+        select {
+            border-radius: 5px;
+            background: $white-normal;
+            padding: 5px;
+        }
+
+        option {
+            margin: 0 0 3px 0;
+            border-radius: unset;
+        }
+
+    }
+}
+
+.lp-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: $primary-normal;
+    text-align: center;
+    color: $white-normal;
+    padding: 15px 0;
+    margin: 30px 0 0 0;
 }
