--- a/style.css
+++ b/style.css
@@ -583,6 +583,7 @@ html[data-theme=dark] .footer .footer-icons a:hover i {
 body {
   background: url("./assets/bg.svg") no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .lp-header {
@@ -596,6 +597,113 @@ body {
 }
 .lp-header .lp-header-logo .logo {
   max-width: 5%;
+}
+
+.lp-principal {
+  background: rgba(4, 15, 26, 0.5);
+  width: 100%;
+  padding: 45px 0;
+  margin: 15px auto;
+}
+.lp-principal section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: space-between;
+  width: 60vw;
+  margin: 0 auto;
+  padding: 0 30px 40px 30px;
+}
+.lp-principal section h1,
+.lp-principal section h2 {
+  text-transform: uppercase;
+}
+.lp-principal section h1 {
+  filter: drop-shadow(1px 2px 1px #040f1a);
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: #fff;
+}
+.lp-principal section h2 {
+  filter: drop-shadow(1px 2px 1px #06121e);
+  font-size: 1.8rem;
+  color: #d94140;
+  margin: 14px 0;
+}
+.lp-principal section p {
+  font-size: 1.2rem;
+  color: #fff;
+  line-height: 150%;
+  margin: 0 0 7px 0;
+}
+.lp-principal section p a {
+  color: #fff;
+  border-bottom: 3px solid #d94140;
+  transition: all 0.3s ease-in-out;
+}
+.lp-principal section p a:hover {
+  color: #d34040;
+}
+.lp-principal .botao {
+  border: unset;
+  background: #d94140;
+  font-size: 1rem;
+  color: #fefbff;
+  padding: 15px 30px;
+  margin: 15px auto;
+  transition: all 0.3s ease-in-out;
+}
+.lp-principal .botao:hover {
+  background: #fefbff;
+  color: #232224;
+}
+.lp-principal form {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: space-between;
+  width: 60vw;
+  background-color: #0c2135;
+  color: #fff;
+  border-radius: 7px;
+  box-shadow: 0 0 5px 0 #fff;
+  margin: 0 auto;
+  padding: 20px 30px 40px 30px;
+}
+.lp-principal form label {
+  margin: 14px 0 3px 0;
+}
+.lp-principal form input::-moz-placeholder {
+  color: #232224;
+}
+.lp-principal form input,
+.lp-principal form input::placeholder,
+.lp-principal form select,
+.lp-principal form option {
+  color: #232224;
+}
+.lp-principal form input,
+.lp-principal form select {
+  border-radius: 5px;
+  background: #fff;
+  padding: 5px;
+}
+.lp-principal form option {
+  margin: 0 0 3px 0;
+  border-radius: unset;
+}
+
+.lp-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #06121e;
+  text-align: center;
+  color: #fff;
+  padding: 15px 0;
+  margin: 30px 0 0 0;
 }
 
 body {
